restart nginx where needed

--- a/deploy/roles/hipache/tasks/main.yml
+++ b/deploy/roles/hipache/tasks/main.yml
@@ -20,6 +20,8 @@
 
 - name: Start hipache
   docker: image=tutum/hipache links=hipache-redis:redis name=hipache ports=80:80 env="SERVER_WORKERS={{hipache_workers}}"
+  notify:
+    - restart nginx
 
 - name: Wait for hipache redis port
   wait_for: host=127.0.0.1 port={{hipache_redis_port}} delay=3
