--- a/deploy/roles/nginx/tasks/main.yml
+++ b/deploy/roles/nginx/tasks/main.yml
@@ -39,10 +39,12 @@
 - name: Copy the virtual host config file
   template: src=nginx_uwsgi.conf dest=/etc/nginx/sites-available/{{app_name}}.conf
   notify:
-    - reload nginx
+    - restart nginx
 
 - name: Enable the virtual host
   file: path=/etc/nginx/sites-enabled/{{app_name}}.conf src=/etc/nginx/sites-available/{{app_name}}.conf state=link
+  notify:
+    - restart nginx
 
 - name: Increase the TCP buffer
   sysctl: name="net.ipv4.tcp_max_syn_backlog" value=2048 reload=yes
