--- a/deploy/hosts/staging/secret_vars.yml.example
+++ b/deploy/hosts/staging/secret_vars.yml.example
@@ -30,6 +30,11 @@ shipyard_key:
 postgres_user:
 postgres_password:
 
+# s3 backup
+s3_backup_bucket:
+s3_backup_access_key:
+s3_backup_secret_key:
+s3_gpg_passphrase:
 
 # DO NOT EDIT THESE - they are needed for correctly setting env variables
 # edit the variables above and ones in group_vars/all
