Ticket 106: CustomerIO events are now environment-dependent (vagrant/staging/production)

--- a/deploy/hosts/production/secret_vars.yml.example
+++ b/deploy/hosts/production/secret_vars.yml.example
@@ -1,6 +1,7 @@
 # django settings
 customerio_api_key:
 customerio_site_id:
+# deployment_environment: [taken from group_vars]
 django_debug: False
 django_settings_module: launcher.settings.production
 intercom_app_id:
@@ -43,6 +44,7 @@ django_env_vars: {
   CUSTOMERIO_API_KEY: "{{customerio_api_key}}",
   DEBUG: "{{django_debug}}",
   DEMO_APPS_CUSTOM_DOMAIN: "{{demo_apps_custom_domain}}",
+  DEPLOYMENT_ENVIRONMENT: "{{deployment_environment}}",
   DJANGO_SETTINGS_MODULE: "{{django_settings_module}}",
   HIPACHE_REDIS_IP: "{{hipache_redis_ip}}",
   HIPACHE_REDIS_PORT: "{{hipache_redis_port}}",
